# Raspberry-Sky

./: .gitignore  CMakeLists.txt  README.md  optitrack_bounds.txt
executables/: controls_simulation.cpp  ekf_simulation.cpp  fts_test.cpp  gain_testing.cpp  pathing_simulation.cpp  rt_simulation.cpp  simulation.cpp
ext_libs/thermal-camera/: CMakeLists.txt  MLX90640_API.c  MLX90640_API.h  MLX90640_I2C_Driver.cpp  MLX90640_I2C_Driver.h  main.cpp
int_libs/ekflib/: CMakeLists.txt  dcm.cpp  dcm.h
libs/thermal-camera/: CMakeLists.txt
postprocessing/: sim_visualizer.m
src/: CMakeLists.txt  IMUHandler.cpp  IMUHandler.h  MotorDriver.cpp  MotorDriver.h  RCInput.cpp  RCInput.h  UDPSender.cpp  UDPSender.h  controller.cpp  controller.h  ekf.cpp  ekf.h  guidance.cpp  guidance.h  main.cpp  math_utils.cpp  math_utils.h  network.cpp  throttle_pass.cpp
