cmake_minimum_required(VERSION 3.5)
project(rsky)
set(CMAKE_CXX_STANDARD 14)

set(mySRC ${CMAKE_SOURCE_DIR}/src) 
set(myInclude ${CMAKE_SOURCE_DIR}/include)
set(extlibs ${CMAKE_SOURCE_DIR}/ext_libs)
set(intlibs ${CMAKE_SOURCE_DIR}/int_libs)

add_subdirectory(${extlibs}/thermal-camera)
add_subdirectory(${extlibs}/Navio2)
add_subdirectory(${intlibs}/ekflib)
include_directories(${myInclude}) 

add_executable(rsky ${mySRC}/main.cpp)
target_link_libraries(rsky PRIVATE ekflib)
target_include_directories(rsky PUBLIC ${extlibs}/eigen)
add_executable(throttle ${mySRC}/throttle_pass.cpp)
target_link_libraries(throttle PRIVATE thermal-camera Common Navio2)
#target_link_libraries(rsky PRIVATE thermal-camera)
